Swapped Catalog with APICatalogRepository